--- a/app/pages/common.html
+++ b/app/pages/common.html
@@ -16,9 +16,9 @@
       <div class="lessons-categories-holder">
         <div class="row">
           <div
-            ng-repeat="app in applicationData.application  track by $index">
+            ng-repeat="app in applicationData  track by $index">
 
-            <a href="{{app.url}}">
+            <a href="#/all/{{app.technologyname}}">
               <div class="col-sm-6 col-md-4 item">
 
                 <div class="logo-holder">
