--- a/app/pages/java.html
+++ b/app/pages/java.html
@@ -16,9 +16,9 @@
       <div class="lessons-categories-holder">
         <div class="row">
           <div
-            ng-repeat="app in applicationData.application | filter : { technologytype : 'java' } track by $index">
+            ng-repeat="app in applicationData | filter : { technologytype : 'java' } track by $index">
 
-            <a href="{{app.url}}">
+            <a href="#/java/{{app.technologyname}}">
               <div class="col-sm-6 col-md-4 item">
 
                 <div class="logo-holder">
