--- a/app/pages/common_technology.html
+++ b/app/pages/common_technology.html
@@ -7,7 +7,7 @@
 
 		<div class="subtitle"><p>{{data.longdescription}}</p>
 
-<p>Just starting out? <strong><a href="">Check out this guide!</a></strong></p>
+<p>Just starting out? <strong></strong></p>
 </div>
 
 			<br>
