--- a/app/pages/web_technology.html
+++ b/app/pages/web_technology.html
@@ -81,14 +81,14 @@
 					<h4 class="title">
 					{{applicationDataOneTech.technologyname}}
 						<a
-							href="#/all/{{tech.technologyname}}/{{data.course_id}}">{{data.description}}</a>
+							href="#/web/{{tech.technologyname}}/{{data.course_id}}">{{data.description}}</a>
 
 					</h4>
 				</td>
 				<td class="cell cell-lesson-category hidden-xs hidden-sm">
 					<div class="info-line">
 						<small class="folder"><i class="icon-folder-open-alt"></i>
-							<a href="#/all/{{tech.technologytype}}/{{data.course_id}}">{{data.technology}}</a> </small>
+							<a href="#/web/{{tech.technologytype}}/{{data.course_id}}">{{data.technology}}</a> </small>
 					</div>
 				</td>
 
