--- a/app/pages/main.html
+++ b/app/pages/main.html
@@ -1,14 +1,28 @@
+
+<section class="hero">
+      <div class="container">
+
+        <div class="logo-holder">
+          <a href="#/web"><img alt="Tech logo angular" src="//d1xwtr0qwr70yv.cloudfront.net/assets/elements/tech-logo-angular-4cb01d39f1e20e15c6e50c48d16d7f38.svg"></a>
+          <a href="#/web"><img alt="React" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/react-6c390f08991543523f62654f8d046731.svg"></a>
+
+          <a href="#/web"><img alt="Js" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/js-d2386d3bbb462f4f355b08f0df3ae9ed.svg"></a>
+          <a href="#/web"><img alt="Tech logo d3" src="//d1xwtr0qwr70yv.cloudfront.net/assets/elements/tech-logo-d3-1baaa3d6e6b56481778837a5f5a6fbe3.svg"></a>
+          <a href="#/web"><img alt="Es6" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/es6-b05488059a88b4f8db414c7b31614c5e.svg"></a>
+        </div>
+
+        <h1 class="mega title">GenNext Training to deliver project based learning to give you the head start you need as a developer</h1>
+
+        <p class="subtitle">Level up your programming skills today with
+          condensed video lessons on industry leading web frameworks and tools!</p>
+        <a id="signup" href="#/all" class="custom-btn custom-btn-red custom-btn-primary">Unlock the Knowledge
+          <br> <small><i>click here to start</i></small></a>
+      </div><!-- container -->
+
+
+    </section>
 <section class="section">
   <div class="container">
-    <div class="title-subtitle-block">
-      <h2 class="title">GenNext Training to deliver project based
-        learning to give you the head start you need as a developer</h2>
-      <p class="subtitle">
-        <i>Learn programming concepts <a href="/series"
-          class="underlined">Click here to view all Tutorials series.</a></i>
-      </p>
-    </div>
-
     <div class="row block-lessons-series">
       <div class="col-sm-6 item">
         <div class="media-holder">
@@ -245,7 +259,7 @@
         </div>
         <!-- media-subscription-holder -->
       </div>
-      
+
       <div class="col-sm-6 item">
         <div class="media-holder">
           <a
