--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  <header ng-include="'app/partials/header.html'"></header>
  <div class="bodyContent">
 	<div class="page-loading">
-		<img src="images/loading.gif" class="ajax-loader">
+		<img src="img/loading.gif" class="ajax-loader">
 	</div>
 	<!-- Begin page content -->
 	<div data-ui-view></div>
