--- a/app/pages/createVideo.html
+++ b/app/pages/createVideo.html
@@ -13,7 +13,7 @@
 						<tr>
 							<td><input required
 								class="form-control override-form-control" data-toggle="tooltip"
-								customtooltip data-placement="top" ng-model="training.id"
+								customtooltip data-placement="top" ng-model="video.id"
 								type="text" name="id" placeholder="Id"></input></td>
 						</tr>
 					</table>
@@ -31,7 +31,7 @@
 						<tr>
 							<td><input required
 								class="form-control override-form-control" data-toggle="tooltip"
-								customtooltip data-placement="top" ng-model="training.link"
+								customtooltip data-placement="top" ng-model="video.link"
 								type="text" name="link" placeholder="link"></input></td>
 						</tr>
 					</table>
@@ -51,7 +51,7 @@
 						<tr>
 							<td><input type="text" data-toggle="tooltip"
 								data-placement="top" title="Enter Technology Name"
-								ng-model="training.description" name="description"
+								ng-model="video.description" name="description"
 								id="description" class="form-control "
 								placeholder="video description"></td>
 						</tr>
@@ -73,7 +73,7 @@
 						<tr>
 							<td><input type="text" data-toggle="tooltip"
 								data-placement="top" title="Enter Technology Name"
-								ng-model="training.playlisturl" name="playlisturl"
+								ng-model="video.playlisturl" name="playlisturl"
 								id="playlisturl" class="form-control "
 								placeholder="video playlisturl"></td>
 						</tr>
@@ -95,7 +95,7 @@
 						<tr>
 							<td><input type="text" data-toggle="tooltip"
 								data-placement="top" title="Enter Technology Name"
-								ng-model="training.technology" name="technology" id="technology"
+								ng-model="video.technology" name="technology" id="technology"
 								class="form-control " placeholder="technology Name"></td>
 						</tr>
 					</table>
@@ -116,7 +116,7 @@
 						</tr>
 						<tr>
 							<td><input type="text" data-toggle="tooltip" customtooltip
-								data-placement="top" title="Enter logo" ng-model="training.logo"
+								data-placement="top" title="Enter logo" ng-model="video.logo"
 								name="logo" id="logo" class="form-control " placeholder="logo"></td>
 						</tr>
 					</table>
@@ -137,7 +137,7 @@
 						<tr>
 							<td><input type="text" data-toggle="tooltip"
 								data-placement="top" title="Enter course_id"
-								ng-model="training.course_id" name="course_id" id="technology"
+								ng-model="video.course_id" name="course_id" id="technology"
 								class="form-control " placeholder="course_id"></td>
 						</tr>
 					</table>
@@ -159,9 +159,9 @@
 						<tr>
 							<td><textarea required class="form-control "
 									data-toggle="tooltip" customtooltip data-placement="top"
-									title="New Training : Short Description"
-									ng-model="training.shortdescription" name="shortdescription"
-									placeholder="New Training : Short Description"></textarea></td>
+									title="New video : Short Description"
+									ng-model="video.shortdescription" name="shortdescription"
+									placeholder="New video : Short Description"></textarea></td>
 						</tr>
 					</table>
 				</div>
@@ -182,9 +182,9 @@
 						<tr>
 							<td><textarea required class="form-control "
 									data-toggle="tooltip" customtooltip data-placement="top"
-									title="New Training : Long Description" name="longdescription"
-									ng-model="training.longdescription"
-									placeholder="New Training : Long Description"></textarea></td>
+									title="New video : Long Description" name="longdescription"
+									ng-model="video.longdescription"
+									placeholder="New video : Long Description"></textarea></td>
 						</tr>
 					</table>
 				</div>
