--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<meta property="og:url" content="" />
 	<meta property="og:description" content=" Learn software, creative, and business skills to achieve your personal and professional goals. Join today and start learning. A unique combination of classroom training and online training gives you the best from both the approaches and facilitates different needs , You set the pace with online learning. Learn what you want, when you want, and practice with the instructor's files while you watch and listen and Become a member" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/glyphicons.css">
 	<link href="css/style.css" rel="stylesheet">
 	<style>
 		.ajax-loader {
