--- a/app/pages/main.html
+++ b/app/pages/main.html
@@ -1,347 +1,347 @@
 
 <section class="hero">
-      <div class="container">
+	<div class="container">
 
-        <div class="logo-holder">
-          <a href="#/web"><img alt="Tech logo angular" src="//d1xwtr0qwr70yv.cloudfront.net/assets/elements/tech-logo-angular-4cb01d39f1e20e15c6e50c48d16d7f38.svg"></a>
-          <a href="#/web"><img alt="React" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/react-6c390f08991543523f62654f8d046731.svg"></a>
+		<div class="logo-holder">
+			<a href="#/web"><img alt="Tech logo angular" src="img/angular.svg"></a>
+			<a href="#/web"><img alt="React" src="img/react.svg"></a>
 
-          <a href="#/web"><img alt="Js" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/js-d2386d3bbb462f4f355b08f0df3ae9ed.svg"></a>
-          <a href="#/web"><img alt="Tech logo d3" src="//d1xwtr0qwr70yv.cloudfront.net/assets/elements/tech-logo-d3-1baaa3d6e6b56481778837a5f5a6fbe3.svg"></a>
-          <a href="#/web"><img alt="Es6" src="//d1xwtr0qwr70yv.cloudfront.net/assets/tech/es6-b05488059a88b4f8db414c7b31614c5e.svg"></a>
-        </div>
+			<a href="#/web"><img alt="Js" src="img/javascript.svg"></a>
+			<a href="#/web"><img alt="Tech logo d3" src="img/d3.svg"></a>
+			<a href="#/web"><img alt="Es6" src="img/es6.svg"></a>
+		</div>
 
-        <h1 class="mega title">GenNext Training to deliver project based learning to give you the head start you need as a developer</h1>
+		<h1 class="mega title">GenNext Training to deliver project based learning to give you the head start you need as a developer</h1>
 
-        <p class="subtitle">Level up your programming skills today with
-          condensed video lessons on industry leading web frameworks and tools!</p>
-        <a id="signup" href="#/all" class="custom-btn custom-btn-red custom-btn-primary">Unlock the Knowledge
-          <br> <small><i>click here to start</i></small></a>
-      </div><!-- container -->
-
-
-    </section>
-<section class="section">
-  <div class="container">
-    <div class="row block-lessons-series">
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="">
-            <img src="img/angular.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>AngularJS Data Binding</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">7
-                AngularJS lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="">
-            <img src="img/angularjs.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Learn Protractor Testing for AngularJS</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">10
-                AngularJS lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-    </div>
-    <div class="row block-lessons-series">
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="">
-            <img src="img/node.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Node js Middlware development</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">11
-                Node JS lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a href=""> <img
-            src="img/html5.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>HTML5 Fundamentals</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a href="react-fundamentals">21
-                html5 lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-    </div>
-    <div class="row block-lessons-series">
+		<p class="subtitle">Level up your programming skills today with
+			condensed video lessons on industry leading web frameworks and tools!</p>
+			<a id="signup" href="#/all" class="custom-btn custom-btn-red custom-btn-primary">Unlock the Knowledge
+				<br> <small><i>click here to start</i></small></a>
+			</div><!-- container -->
 
 
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a href="angularjs-data-modeling"> <img
-            src="img/java.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
+		</section>
+		<section class="section">
+			<div class="container">
+				<div class="row block-lessons-series">
+					<div class="col-sm-6 item">
+						<div class="media-holder">
+							<a
+							href="">
+							<img src="img/angular.jpg" class="img-responsive">
+						</a>
+					</div>
+					<!-- media-holder -->
 
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Java Application Development</p>
-          </h3>
+					<div class="media-subscription-holder">
+						<h3 class="title">
+							<p>AngularJS Data Binding</p>
+						</h3>
 
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a href="angularjs-data-modeling">13
-                Java learning series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
+						<div class="info-line">
+							<small class="folder"> <i class="icon-folder-open-alt"></i>
+								<a
+								href="">7
+								AngularJS lessons in this series</a>
+							</small>
+						</div>
+						<!-- info-line -->
+					</div>
+					<!-- media-subscription-holder -->
+				</div>
 
+				<div class="col-sm-6 item">
+					<div class="media-holder">
+						<a
+						href="">
+						<img src="img/angularjs.jpg" class="img-responsive">
+					</a>
+				</div>
+				<!-- media-holder -->
 
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a href="introduction-to-d3"> <img
-            src="img/android.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
+				<div class="media-subscription-holder">
+					<h3 class="title">
+						<p>Learn Protractor Testing for AngularJS</p>
+					</h3>
 
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Android mobile apps</p>
-          </h3>
+					<div class="info-line">
+						<small class="folder"> <i class="icon-folder-open-alt"></i>
+							<a
+							href="">10
+							AngularJS lessons in this series</a>
+						</small>
+					</div>
+					<!-- info-line -->
+				</div>
+				<!-- media-subscription-holder -->
+			</div>
 
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a href="introduction-to-d3">android development series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-    </div>
-    <div class="row block-lessons-series">
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a href="angular-automation-with-gulp">
-            <img src="img/js.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
+		</div>
+		<div class="row block-lessons-series">
+			<div class="col-sm-6 item">
+				<div class="media-holder">
+					<a
+					href="">
+					<img src="img/node.jpg" class="img-responsive">
+				</a>
+			</div>
+			<!-- media-holder -->
 
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Javascript development</p>
-          </h3>
+			<div class="media-subscription-holder">
+				<h3 class="title">
+					<p>Node js Middlware development</p>
+				</h3>
 
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a href="angular-automation-with-gulp">2
-                javascript lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
+				<div class="info-line">
+					<small class="folder"> <i class="icon-folder-open-alt"></i>
+						<a
+						href="">11
+						Node JS lessons in this series</a>
+					</small>
+				</div>
+				<!-- info-line -->
+			</div>
+			<!-- media-subscription-holder -->
+		</div>
 
+		<div class="col-sm-6 item">
+			<div class="media-holder">
+				<a href=""> <img
+					src="img/html5.jpg" class="img-responsive">
+				</a>
+			</div>
+			<!-- media-holder -->
 
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="angularjs-app-from-scratch-getting-started">
-            <img src="img/nodejs.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
+			<div class="media-subscription-holder">
+				<h3 class="title">
+					<p>HTML5 Fundamentals</p>
+				</h3>
 
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Grunt Gulp Bower NPM tools</p>
-          </h3>
+				<div class="info-line">
+					<small class="folder"> <i class="icon-folder-open-alt"></i>
+						<a href="react-fundamentals">21
+							html5 lessons in this series</a>
+						</small>
+					</div>
+					<!-- info-line -->
+				</div>
+				<!-- media-subscription-holder -->
+			</div>
 
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="angularjs-app-from-scratch-getting-started">9
-                front end development and learning</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-    </div>
-    <div class="row block-lessons-series">
-
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="angular-and-webpack-for-modular-applications">
-            <img src="img/webservice.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>J2EE and Java Web MVC Frameworks</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="angular-and-webpack-for-modular-applications">8
-                java mvc  in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="">
-            <img src="img/maven.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Apache maven Build tool</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">8
-                Maven lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-    </div>
-    <div class="row block-lessons-series">
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="angular-and-webpack-for-modular-applications">
-            <img src="img/spring.png" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Spring framework Applications</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">8
-                spring mvc lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-      <div class="col-sm-6 item">
-        <div class="media-holder">
-          <a
-            href="">
-            <img src="img/bigdata.jpg" class="img-responsive">
-          </a>
-        </div>
-        <!-- media-holder -->
-
-        <div class="media-subscription-holder">
-          <h3 class="title">
-            <p>Hadoop application development</p>
-          </h3>
-
-          <div class="info-line">
-            <small class="folder"> <i class="icon-folder-open-alt"></i>
-              <a
-              href="">8
-                Hadoop lessons in this series</a>
-            </small>
-          </div>
-          <!-- info-line -->
-        </div>
-        <!-- media-subscription-holder -->
-      </div>
-
-    </div>
+		</div>
+		<div class="row block-lessons-series">
 
 
-  </div>
+			<div class="col-sm-6 item">
+				<div class="media-holder">
+					<a href="angularjs-data-modeling"> <img
+						src="img/java.jpg" class="img-responsive">
+					</a>
+				</div>
+				<!-- media-holder -->
+
+				<div class="media-subscription-holder">
+					<h3 class="title">
+						<p>Java Application Development</p>
+					</h3>
+
+					<div class="info-line">
+						<small class="folder"> <i class="icon-folder-open-alt"></i>
+							<a href="angularjs-data-modeling">13
+								Java learning series</a>
+							</small>
+						</div>
+						<!-- info-line -->
+					</div>
+					<!-- media-subscription-holder -->
+				</div>
+
+
+				<div class="col-sm-6 item">
+					<div class="media-holder">
+						<a href="introduction-to-d3"> <img
+							src="img/android.jpg" class="img-responsive">
+						</a>
+					</div>
+					<!-- media-holder -->
+
+					<div class="media-subscription-holder">
+						<h3 class="title">
+							<p>Android mobile apps</p>
+						</h3>
+
+						<div class="info-line">
+							<small class="folder"> <i class="icon-folder-open-alt"></i>
+								<a href="introduction-to-d3">android development series</a>
+							</small>
+						</div>
+						<!-- info-line -->
+					</div>
+					<!-- media-subscription-holder -->
+				</div>
+			</div>
+			<div class="row block-lessons-series">
+				<div class="col-sm-6 item">
+					<div class="media-holder">
+						<a href="angular-automation-with-gulp">
+							<img src="img/js.jpg" class="img-responsive">
+						</a>
+					</div>
+					<!-- media-holder -->
+
+					<div class="media-subscription-holder">
+						<h3 class="title">
+							<p>Javascript development</p>
+						</h3>
+
+						<div class="info-line">
+							<small class="folder"> <i class="icon-folder-open-alt"></i>
+								<a href="angular-automation-with-gulp">2
+									javascript lessons in this series</a>
+								</small>
+							</div>
+							<!-- info-line -->
+						</div>
+						<!-- media-subscription-holder -->
+					</div>
+
+
+					<div class="col-sm-6 item">
+						<div class="media-holder">
+							<a
+							href="angularjs-app-from-scratch-getting-started">
+							<img src="img/nodejs.jpg" class="img-responsive">
+						</a>
+					</div>
+					<!-- media-holder -->
+
+					<div class="media-subscription-holder">
+						<h3 class="title">
+							<p>Grunt Gulp Bower NPM tools</p>
+						</h3>
+
+						<div class="info-line">
+							<small class="folder"> <i class="icon-folder-open-alt"></i>
+								<a
+								href="angularjs-app-from-scratch-getting-started">9
+								front end development and learning</a>
+							</small>
+						</div>
+						<!-- info-line -->
+					</div>
+					<!-- media-subscription-holder -->
+				</div>
+			</div>
+			<div class="row block-lessons-series">
+
+				<div class="col-sm-6 item">
+					<div class="media-holder">
+						<a
+						href="angular-and-webpack-for-modular-applications">
+						<img src="img/webservice.jpg" class="img-responsive">
+					</a>
+				</div>
+				<!-- media-holder -->
+
+				<div class="media-subscription-holder">
+					<h3 class="title">
+						<p>J2EE and Java Web MVC Frameworks</p>
+					</h3>
+
+					<div class="info-line">
+						<small class="folder"> <i class="icon-folder-open-alt"></i>
+							<a
+							href="angular-and-webpack-for-modular-applications">8
+							java mvc  in this series</a>
+						</small>
+					</div>
+					<!-- info-line -->
+				</div>
+				<!-- media-subscription-holder -->
+			</div>
+
+			<div class="col-sm-6 item">
+				<div class="media-holder">
+					<a
+					href="">
+					<img src="img/maven.jpg" class="img-responsive">
+				</a>
+			</div>
+			<!-- media-holder -->
+
+			<div class="media-subscription-holder">
+				<h3 class="title">
+					<p>Apache maven Build tool</p>
+				</h3>
+
+				<div class="info-line">
+					<small class="folder"> <i class="icon-folder-open-alt"></i>
+						<a
+						href="">8
+						Maven lessons in this series</a>
+					</small>
+				</div>
+				<!-- info-line -->
+			</div>
+			<!-- media-subscription-holder -->
+		</div>
+
+	</div>
+	<div class="row block-lessons-series">
+		<div class="col-sm-6 item">
+			<div class="media-holder">
+				<a
+				href="angular-and-webpack-for-modular-applications">
+				<img src="img/spring.png" class="img-responsive">
+			</a>
+		</div>
+		<!-- media-holder -->
+
+		<div class="media-subscription-holder">
+			<h3 class="title">
+				<p>Spring framework Applications</p>
+			</h3>
+
+			<div class="info-line">
+				<small class="folder"> <i class="icon-folder-open-alt"></i>
+					<a
+					href="">8
+					spring mvc lessons in this series</a>
+				</small>
+			</div>
+			<!-- info-line -->
+		</div>
+		<!-- media-subscription-holder -->
+	</div>
+	<div class="col-sm-6 item">
+		<div class="media-holder">
+			<a
+			href="">
+			<img src="img/bigdata.jpg" class="img-responsive">
+		</a>
+	</div>
+	<!-- media-holder -->
+
+	<div class="media-subscription-holder">
+		<h3 class="title">
+			<p>Hadoop application development</p>
+		</h3>
+
+		<div class="info-line">
+			<small class="folder"> <i class="icon-folder-open-alt"></i>
+				<a
+				href="">8
+				Hadoop lessons in this series</a>
+			</small>
+		</div>
+		<!-- info-line -->
+	</div>
+	<!-- media-subscription-holder -->
+</div>
+
+</div>
+
+
+</div>
 
 </section>
