--- a/app/pages/web_technology.html
+++ b/app/pages/web_technology.html
@@ -65,7 +65,7 @@
 				<div class="series-lessons-holder" ">
 				<div class="table-responsive">
 	<table class="table table-condensed">
-		<tbody>
+		<tbody>{{YouTubeDataOneTech}}
 			<tr ng-repeat="data in YouTubeDataOneTech track by $index" id="lesson-row-207" class="lesson-row ">
 				<td class="cell cell-pseudo-checkbox">
 					<div class="pseudo-checkbox-holder">
