--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<meta property="og:image" content="http://gennexttraining.com/assets/img/1.jpg" />
 	<meta property="og:url" content="" />
 	<meta property="og:description" content=" Learn software, creative, and business skills to achieve your personal and professional goals. Join today and start learning. A unique combination of classroom training and online training gives you the best from both the approaches and facilitates different needs , You set the pace with online learning. Learn what you want, when you want, and practice with the instructor's files while you watch and listen and Become a member" />
+	<link rel="stylesheet" href="app/build/development/css/main.min.css">
 
-	<link href="app/build/development/css/main.min.css" rel="stylesheet">
 	<style>
 		.ajax-loader {
 			position: fixed;
@@ -44,9 +44,13 @@
 	<!-- End page content -->
 </div>
 <footer ng-include="'app/partials/footer.html'"></footer>
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="app/build/development/js/script.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="angular/angular.min.js" ></script>
+<script src="angular/angular-ui-router.min.js"></script>
+<script src="angular/angular-resource.js"></script>
+<script src="angular/angular-translate.js"></script>
+<script src="js/main.js"></script>
 </body>
 </body>
 </html>
