--- a/app/pages/web_technology.html
+++ b/app/pages/web_technology.html
@@ -64,8 +64,9 @@
 		<div class="tab-pane tab-view-list active" id="lesson-list">
 				<div class="series-lessons-holder" ">
 				<div class="table-responsive">
+				{{YouTubeDataOneTech}}
 	<table class="table table-condensed">
-		<tbody>{{YouTubeDataOneTech}}
+		<tbody>
 			<tr ng-repeat="data in YouTubeDataOneTech track by $index" id="lesson-row-207" class="lesson-row ">
 				<td class="cell cell-pseudo-checkbox">
 					<div class="pseudo-checkbox-holder">
