--- a/app/pages/createVideo.html
+++ b/app/pages/createVideo.html
@@ -131,8 +131,7 @@
 					class="col-xs-12 col-sm-12  col-md-12 col-lg-12 override-col-margin">
 					<table style="width: 60%">
 						<tr>
-							<td class="questionoptioncommon"><label>Technology
-									Name </label></td>
+							<td class="questionoptioncommon"><label>course_id </label></td>
 						</tr>
 						<tr>
 							<td><input type="text" data-toggle="tooltip"
