--- a/app/pages/web_technology.html
+++ b/app/pages/web_technology.html
@@ -63,9 +63,9 @@
 	<div class="tab-content view-tabs-holder">
 		<div class="tab-pane tab-view-list active" id="lesson-list">
 				<div class="series-lessons-holder" ">
-				<div class="table-responsive">
+				<div class="table-responsive" style="width:100%;">
 
-	<table class="table table-condensed">
+	<table class="table table-condensed" style="width:100%;">
 		<tbody>
 			<tr ng-repeat="data in YouTubeDataOneTech track by $index" id="lesson-row-207" class="lesson-row ">
 				<td class="cell cell-pseudo-checkbox">
