refactor ng code

--- a/app/pages/common_technology_youtube.html
+++ b/app/pages/common_technology_youtube.html
@@ -4,7 +4,7 @@
   <div class="container">
     <img alt="Node" class="hero-logo" src="img/{{YouTubeDataOneCourse[0].technology}}.png">
 
-    <h1 class="title ng-binding">{{YouTubeDataOneCourse[0].technology}} Lessons series </h1>
+    <h1 class="title ng-binding">{{YouTubeDataOneCourse[0].shortdescription}} </h1>
 
     <div class="lesson-without-playlist-holder">
       <div class="lessons-frame-holder">
