--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 <script src="angular/angular-ui-router.min.js"></script>
 <script src="angular/angular-resource.js"></script>
 <script src="angular/angular-translate.js"></script>
-<script src="js/main.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controller.js"></script>
+<script src="js/factory.js"></script>
 </body>
 </body>
 </html>
