--- a/app/pages/playlists.html
+++ b/app/pages/playlists.html
@@ -1,40 +1,163 @@
 
 
 <div data-ui-view>
-  <section class="section section-learn-these-tools">
-    <div class="container">
+<section class="section">
+		<div class="container">
+			<div class="title-subtitle-block">
+				<h2 class="title">I want to...</h2>
+			</div>
 
-      <div class="title-subtitle-block">
-        <h2 class="title">Youtube playlist on latest technologies</h2>
+				<div class="row block-lessons-series">
+						<div class="col-sm-6 item">
+	<a href="/playlists/new-to-angular-start-here">
+			<div class="media-holder">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/playlists/covers/000/000/001/half/get_started_angular.jpg?1433291307" class="img-responsive img-admin-tech-logo">
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/new-to-angular-start-here"><p>...start learning Angular 1 from the beginning</p>
+</a></h3>
+		</div>
+		<small class="description"><p>Ready to dig in to AngularJS? These lessons will get you started.</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/first-step-adding-to-project?pl=new-to-angular-start-here"> Watch Now (105 lessons)</a></i></small></div>
+	</div>
+</div>
 
-        <p class="subtitle">
-          <i>Browse Lessons by Technology</i>
-        </p>
-      </div>
-      <!-- title-subtitle-block -->
+						<div class="col-sm-6 item">
+	<a href="/playlists/node-js-orm-with-sequelize">
+			<div class="media-holder">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/playlists/covers/000/014/918/half/sequelize.jpg?1438354263" class="img-responsive img-admin-tech-logo">
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/node-js-orm-with-sequelize"><p>...learn Node.js ORM With Sequelize</p>
+</a></h3>
+		</div>
+		<small class="description"><p>Need to manage relationships between your PostgreSQL, MySQL, MariaDB, SQLite or MSSQL entities in Node.JS? Sequelize provides a clean way to get promise-based ORM in your Node application.</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/node-js-sequelize-model-definition-basics?pl=node-js-orm-with-sequelize"> Watch Now (6 lessons)</a></i></small></div>
+	</div>
+</div>
 
-      <div class="lessons-categories-holder">
-        <div class="row">
-          <div
-            ng-repeat="data in YouTubeData.youtube " ng-if="data.playlisturl != '' ">
-            <h3>Youtube Tutorial series on {{data.technology}}</h3>
-            <section class="section text-center">
-            <div class="container videoWrapper">
-             <iframe height="600px" width="1100px" ng-src="{{data.link | trusted}}" frameborder="0" allowfullscreen></iframe>
-             
-             
-            </div>
+				</div>
+				<div class="row block-lessons-series">
+						<div class="col-sm-6 item">
+	<a href="/playlists/react-react-animation-using-react-motion">
+			<div class="media-holder">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/playlists/covers/000/020/029/half/react-motion.jpg?1441987233" class="img-responsive img-admin-tech-logo">
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/react-react-animation-using-react-motion"><p>...make things move in React with react-motion</p>
+</a></h3>
+		</div>
+		<small class="description"><p>react-motion provides a powerful simplified API for Reacts <code>TransformGroup</code>, allowing for easy animated effects in your React applications.</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/react-react-motion-introduction-to-the-spring-component?pl=react-react-animation-using-react-motion"> Watch Now (4 lessons)</a></i></small></div>
+	</div>
+</div>
 
-          </section>
+						<div class="col-sm-6 item">
+	<a href="/playlists/learn-javascript-arrays-in-depth-dbe40331">
+			<div class="media-holder">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/playlists/covers/000/027/188/half/arrays.jpg?1446209366" class="img-responsive img-admin-tech-logo">
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/learn-javascript-arrays-in-depth-dbe40331"><p>...learn javascript arrays in depth </p>
+</a></h3>
+		</div>
+		<small class="description"><p>Arrays of data are a foundational aspect of programming computers with JavaScript (and many other languages!), and understanding how to use them effectively is a core skill. </p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/javascript-the-array-foreach-method?pl=learn-javascript-arrays-in-depth-dbe40331"> Watch Now (19 lessons)</a></i></small></div>
+	</div>
+</div>
 
-          </div>
+				</div>
+				<div class="row block-lessons-series">
+						<div class="col-sm-6 item">
+	<a href="/playlists/learn-how-to-use-grunt-08e79268">
+			<div class="media-holder cover-banner">
+				<div class="ratio-block">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/technologies/icons/000/000/004/icon/grunt.png?1396287177" class="img-responsive img-tech-logo">
+				</div>
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/learn-how-to-use-grunt-08e79268"><p>...learn how to use Grunt</p>
+</a></h3>
+		</div>
+		<small class="description"><p>Grunt is a useful tool for automation. Let's learn how to use it!</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/gruntjs-introduction-to-grunt?pl=learn-how-to-use-grunt-08e79268"> Watch Now (11 lessons)</a></i></small></div>
+	</div>
+</div>
 
+						<div class="col-sm-6 item">
+	<a href="/playlists/learn-when-to-use-a-service-factory-or-provider-e2507e4b">
+			<div class="media-holder cover-banner">
+				<div class="ratio-block">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/technologies/icons/000/000/001/icon/angularjs.png?1396227088" class="img-responsive img-tech-logo">
+				</div>
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/learn-when-to-use-a-service-factory-or-provider-e2507e4b"><p>...learn when to use a service, factory, or provider?</p>
+</a></h3>
+		</div>
+		<small class="description"><p>The age old question of Angular 1.x. When do I use the service, factory, or provider? These lessons should help you decide!</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/angularjs-services-factories-and-providers-creating-a-value-object?pl=learn-when-to-use-a-service-factory-or-provider-e2507e4b"> Watch Now (5 lessons)</a></i></small></div>
+	</div>
+</div>
 
-        </div>
-        <!-- lessons-categories-holder -->
-      </div>
-      <!-- container -->
-  </section>
-  <!-- section-learn-these-tools -->
+				</div>
+				<div class="row block-lessons-series">
+						<div class="col-sm-6 item">
+	<a href="/playlists/learn-about-recursion-80ae94c4">
+			<div class="media-holder">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/playlists/covers/000/040/065/half/recursion_playlist_banner.jpg?1451411412" class="img-responsive img-admin-tech-logo">
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/learn-about-recursion-80ae94c4"><p>...learn about recursion.</p>
+</a></h3>
+		</div>
+		<small class="description"><p>To understand recursion, you must first understand recursion.</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/javascript-intro-to-recursion-the-problem?pl=learn-about-recursion-80ae94c4"> Watch Now (4 lessons)</a></i></small></div>
+	</div>
+</div>
+
+						<div class="col-sm-6 item">
+	<a href="/playlists/learn-how-to-use-css-transitions-b67ed2f2">
+			<div class="media-holder cover-banner">
+				<div class="ratio-block">
+					<img src="https://d2eip9sf3oo6c2.cloudfront.net/technologies/icons/000/000/013/icon/css.png?1451251812" class="img-responsive img-tech-logo">
+				</div>
+			</div>
+</a>
+	<div class="media-subscription-holder">
+		<div class="media">
+			<h3 class="title"><a href="/playlists/learn-how-to-use-css-transitions-b67ed2f2"><p>...learn how to use CSS transitions.</p>
+</a></h3>
+		</div>
+		<small class="description"><p>Want to spruce up your web application with some nice animated effects, but don't want to use some big library or framework? CSS transitions might be the place to start!</p>
+</small>
+			<div class="info-line"><small class="folder"><i class="icon-play-circle"><a href="https://egghead.io/lessons/css-introduction-to-css-transitions?pl=learn-how-to-use-css-transitions-b67ed2f2"> Watch Now (3 lessons)</a></i></small></div>
+	</div>
+</div>
+
+				</div>
+		</div>
+	</section>
 
 </div>
