--- a/app/pages/main.html
+++ b/app/pages/main.html
@@ -8,7 +8,7 @@
 
 			<a href="#/web"><img alt="Js" src="img/javascript.svg"></a>
 			<a href="#/web"><img alt="Tech logo d3" src="img/d3.svg"></a>
-			<a href="#/web"><img alt="Es6" src="img/es6.svg"></a>
+			<a href="#/web"><img alt="Es6" src="img/jss.svg"></a>
 		</div>
 
 		<h1 class="mega title">GenNext Training to deliver project based learning to give you the head start you need as a developer</h1>
