--- a/app/pages/createTraining.html
+++ b/app/pages/createTraining.html
@@ -36,6 +36,7 @@
 									<option value="java">java</option>
 									<option value="mobile">mobile</option>
 									<option value="web">web</option>
+									<option value="web">DevOps</option>
 							</select></td>
 						</tr>
 					</table>
