--- a/app/pages/common_technology_youtube.html
+++ b/app/pages/common_technology_youtube.html
@@ -14,7 +14,7 @@
 
           <section class="section text-center">
             <div class="container videoWrapper">
-             <iframe height="600px" width="1100px" ng-src="{{YouTubeDataOneCourse[0].link | trusted}}" frameborder="0" allowfullscreen="" src="{{YouTubeDataOneCourse[0].link | trusted}}"></iframe>
+             <iframe height="600px" width="1100px" ng-src="{{YouTubeDataOneCourse[0].link | trusted}}" frameborder="0" allowfullscreen="" src="{{YouTubeDataOneCourse[0].link | urlsuffix  | trusted}}"></iframe>
 
 
             </div>
