--- a/app/pages/java.html
+++ b/app/pages/java.html
@@ -16,13 +16,13 @@
       <div class="lessons-categories-holder">
         <div class="row">
           <div
-            ng-repeat="app in applicationData | filter : { technologytype : 'java' } track by $index">
+            ng-repeat="app in applicationData  | filter : { technologytype : 'java' } track by $index">
 
-            <a href="#/java/{{app.technologyname}}">
+            <a href="#/all/{{app._id}}">
               <div class="col-sm-6 col-md-4 item">
 
                 <div class="logo-holder">
-                  <img alt="{{app.technologyname}}" class="tech-logo"
+                  <img alt="{{app._id}}" class="tech-logo"
                     src="img/{{app.logo}}.png" />
                 </div>
 
@@ -45,3 +45,5 @@
       <!-- container -->
   </section>
   <!-- section-learn-these-tools -->
+
+</div>
