--- a/app/pages/common_technology.html
+++ b/app/pages/common_technology.html
@@ -1,12 +1,12 @@
  <div data-ui-view>
-    <div ng-repeat="tech in applicationDataOneTech">
+    <div>
         <section class="hero" >
             <div class="container">
-                <img alt="Angularjs" class="hero-logo" src="img/{{tech.logo}}.png">
+                <img alt="{{TrainingData.logo}}" class="hero-logo" ng-src="img/{{TrainingData.logo}}.png">s
 
-                <h1 class="title">{{tech.technologyname}} Lessons</h1>
+                <h1 class="title">{{TrainingData.technologyname}} Lessons</h1>
 
-                <div class="subtitle"><p>{{tech.longdescription}}</p>
+                <div class="subtitle"><p>{{TrainingData.longdescription}}</p>
 
                     <p>Just starting out? <strong></strong></p>
                 </div>
@@ -24,7 +24,7 @@
             <section class="section section-browse-all-lessons">
                 <div class="container">
                     <div class="title-subtitle-block">
-                        <h2 class="title">Browse all {{tech.technologyname}} lessons.</h2>
+                        <h2 class="title">Browse all {{TrainingData.technologyname}} lessons.</h2>
                         <p class="subtitle"><i>showing All series lessons...</i></p>
                     </div><!-- title-subtitle-block -->
 
@@ -65,7 +65,7 @@
                                     <div class="table-responsive">
                                         <table class="table table-condensed">
                                             <tbody>
-                                                <tr ng-repeat="data in YouTubeDataOneTech track by $index" id="lesson-row-207" class="lesson-row ">
+                                                <tr ng-repeat="video in TrainingData.youtube track by $index" id="lesson-row-207" class="lesson-row " href="#/all/{{TrainingData.technologyname}}/{{video._id}}">
                                                     <td class="cell cell-pseudo-checkbox">
                                                         <div class="pseudo-checkbox-holder">
                                                             <input type="checkbox">
@@ -75,20 +75,20 @@
                                                     <td class="cell cell-category-logo"><a
                                                         href=""> <img alt="Angular"
                                                         class="category-logo"
-                                                        src="img/angular.png">
+                                                        src="img/{{TrainingData.logo}}.png">
                                                     </a></td>
-                                                    <td class="cell cell-lesson-title">
+                                                   
+                                                      <td class="cell cell-lesson-title">
                                                         <h4 class="title">
-                                                            {{applicationDataOneTech.technologyname}}
-                                                            <a
-                                                            href="#/all/{{tech.technologyname}}/{{data.course_id}}">{{data.description}}</a>
+                                                          <a
+                                                            href="#/all/{{TrainingData._id}}/{{video._id}}">{{video.description}}</a>
 
                                                         </h4>
                                                     </td>
                                                     <td class="cell cell-lesson-category hidden-xs hidden-sm">
                                                         <div class="info-line">
                                                             <small class="folder"><i class="icon-folder-open-alt"></i>
-                                                                <a href="#/all/{{tech.technologytype}}/{{data.course_id}}">{{data.technology}}</a> </small>
+                                                                <a href="#/all/{{TrainingData._id}}/{{video._id}}">{{TrainingData.technology}}</a> </small>
                                                             </div>
                                                         </td>
 
@@ -121,3 +121,5 @@
                     </section>
 
                 </div>
+    }
+    }
