--- a/app/pages/mobile.html
+++ b/app/pages/mobile.html
@@ -1,47 +1,50 @@
 
 
 <div data-ui-view>
-	<section class="section section-learn-these-tools">
-		<div class="container">
+    <section class="section section-learn-these-tools">
+        <div class="container">
 
-			<div class="title-subtitle-block">
-				<h2 class="title">Learn Enterprise  Mobile application development </h2>
+            <div class="title-subtitle-block">
+                <h2 class="title">Learn Enterprise  Mobile application development </h2>
 
-				<p class="subtitle">
-					<i>Browse Lessons by Technology</i>
-				</p>
-			</div>
-			<!-- title-subtitle-block -->
+                <p class="subtitle">
+                    <i>Browse Lessons by Technology</i>
+                </p>
+            </div>
+            <!-- title-subtitle-block -->
 
-			<div class="lessons-categories-holder">
-				<div class="row">
-					<div
-						ng-repeat="app in applicationData | filter : { technologytype : 'mobile' } track by $index">
+            
+      <div class="lessons-categories-holder">
+        <div class="row">
+          <div
+            ng-repeat="app in applicationData  | filter : { technologytype : 'mobile' } track by $index">
 
-						<a href="#/mobile/{{app.technologyname}}">
-							<div class="col-sm-6 col-md-4 item">
+            <a href="#/all/{{app._id}}">
+              <div class="col-sm-6 col-md-4 item">
 
-								<div class="logo-holder">
-									<img alt="{{app.technologyname}}" class="tech-logo"
-										src="img/{{app.logo}}.png" />
-								</div>
+                <div class="logo-holder">
+                  <img alt="{{app._id}}" class="tech-logo"
+                    src="img/{{app.logo}}.png" />
+                </div>
 
-								<h3 class="title">{{app.technologyname}}</h3>
+                <h3 class="title">{{app.technologyname}}</h3>
 
-								<div class="info-line">
-									<small class="folder"><i class="icon-folder-open-alt"></i>
-										<span class="underline">247 lessons</span></small>
-								</div>
-								<!-- info-line -->
-							</div> <!-- item -->
-						</a>
+                <div class="info-line">
+                  <small class="folder"><i class="icon-folder-open-alt"></i>
+                    <span class="underline">247 lessons</span></small>
+                </div>
+                <!-- info-line -->
+              </div> <!-- item -->
+            </a>
 
-					</div>
+          </div>
 
 
-				</div>
-				<!-- lessons-categories-holder -->
-			</div>
-			<!-- container -->
-	</section>
-	<!-- section-learn-these-tools -->
+        </div>
+        <!-- lessons-categories-holder -->
+      </div>
+      <!-- container -->
+  </section>
+  <!-- section-learn-these-tools -->
+
+</div>
